# sales-forecasting-explore

./: .gitignore  README.md  pyproject.toml
experiments/: Research Summary.ipynb
experiments/observations/: baseline.lstm.ipynb  baseline.xgb.ipynb  dataset_exploration.ipynb
