[tool.poetry]
name = "sales-forecasting-explore"
version = "0.1.0"
description = "Sales Forecasting Exploration"
authors = ["Blake Danson <blakedanson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyterlab = "^4.2.5"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
xgboost = "2.0.3"
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
